--- a/content/04_sectionIntroMachines.yaml
+++ b/content/04_sectionIntroMachines.yaml
@@ -29,7 +29,7 @@ data:
         lon: 74
         lat: 40
 assets:
-  backgroundIllustration: /img/backgrounds/003_b.webp
+  backgroundIllustration: /img/backgrounds/003_b.jpg
 
 
 
