--- a/content/05_sectionTrip.yaml
+++ b/content/05_sectionTrip.yaml
@@ -21,4 +21,4 @@ data:
     author: Carlos Briones
     position: Investigador en el CAB
 assets:
-  backgroundIllustration: /img/backgrounds/005.webp
+  backgroundIllustration: /img/backgrounds/005.jpg
