--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -14,7 +14,7 @@ data:
   secondaryText:
 
 assets:
-  backgroundIllustration: /img/backgrounds/002.webp
+  backgroundIllustration: /img/backgrounds/002.jpg
   resources:
     - #1
       title: Marte como imaginario
