--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -4,7 +4,7 @@
 title: Sección
 menuTitle: Histórico de misiones
 assets:
-  backgroundIllustration: /img/backgrounds/003_b.webp
+  backgroundIllustration: /img/backgrounds/003_b.jpg
 
 data:
 #top: lat, left: lon
