--- a/content/03_sectionExplorersHome.yaml
+++ b/content/03_sectionExplorersHome.yaml
@@ -17,7 +17,7 @@ data:
     #- En 1971, la Mariner 9 proporcionó tal cantidad de imágenes de la superficie marciana que en 1978 se pudo publicar el primer gran mapa geológico representando el relieve del planeta de un modo hasta entonces sólo posible para la Luna o la Tierra. <strong>La observación orográfica en alto detalle de Marte ha demostrado que alguna vez, fue geológicamente tan activo como la Tierra</strong>.
 
 assets:
-  backgroundIllustration: /img/backgrounds/003.webp
+  backgroundIllustration: /img/backgrounds/003.jpg
   resources:
     - #1
       title: Marte como lugar
