Remove spiner lib. Add new backgrounds. Refactor 360 & spiner styles

--- a/content/09_sectionFoot.yaml
+++ b/content/09_sectionFoot.yaml
@@ -22,7 +22,7 @@ data:
 
 
 assets:
-  backgroundIllustration: /img/backgrounds/009.webp
+  backgroundIllustration: /img/backgrounds/009.jpg
   logos:
     - #0
       src: /img/logos/cab.jpg
