Test 360 in curiosity

--- a/content/04_sectionMachines.yaml
+++ b/content/04_sectionMachines.yaml
@@ -167,6 +167,59 @@ data:
               target: true
         picture: "/img/machines/curiosity_rems.webp"
         picture_flag: "/img/flags/spain.svg"
+        images360: [
+          'img/curiosity360REMS/Curiosity_REMS01.png',
+          'img/curiosity360REMS/Curiosity_REMS01.png',
+          'img/curiosity360REMS/Curiosity_REMS02.png',
+          'img/curiosity360REMS/Curiosity_REMS03.png',
+          'img/curiosity360REMS/Curiosity_REMS04.png',
+          'img/curiosity360REMS/Curiosity_REMS05.png',
+          'img/curiosity360REMS/Curiosity_REMS06.png',
+          'img/curiosity360REMS/Curiosity_REMS07.png',
+          'img/curiosity360REMS/Curiosity_REMS08.png',
+          'img/curiosity360REMS/Curiosity_REMS09.png',
+          'img/curiosity360REMS/Curiosity_REMS10.png',
+          'img/curiosity360REMS/Curiosity_REMS11.png',
+          'img/curiosity360REMS/Curiosity_REMS12.png',
+          'img/curiosity360REMS/Curiosity_REMS13.png',
+          'img/curiosity360REMS/Curiosity_REMS14.png',
+          'img/curiosity360REMS/Curiosity_REMS15.png',
+          'img/curiosity360REMS/Curiosity_REMS16.png',
+          'img/curiosity360REMS/Curiosity_REMS17.png',
+          'img/curiosity360REMS/Curiosity_REMS18.png',
+          'img/curiosity360REMS/Curiosity_REMS19.png',
+          'img/curiosity360REMS/Curiosity_REMS20.png',
+          'img/curiosity360REMS/Curiosity_REMS21.png',
+          'img/curiosity360REMS/Curiosity_REMS22.png',
+          'img/curiosity360REMS/Curiosity_REMS23.png',
+          'img/curiosity360REMS/Curiosity_REMS24.png',
+          'img/curiosity360REMS/Curiosity_REMS25.png',
+          'img/curiosity360REMS/Curiosity_REMS26.png',
+          'img/curiosity360REMS/Curiosity_REMS27.png',
+          'img/curiosity360REMS/Curiosity_REMS28.png',
+          'img/curiosity360REMS/Curiosity_REMS29.png',
+          'img/curiosity360REMS/Curiosity_REMS30.png',
+          'img/curiosity360REMS/Curiosity_REMS31.png',
+          'img/curiosity360REMS/Curiosity_REMS32.png',
+          'img/curiosity360REMS/Curiosity_REMS33.png',
+          'img/curiosity360REMS/Curiosity_REMS34.png',
+          'img/curiosity360REMS/Curiosity_REMS35.png',
+          'img/curiosity360REMS/Curiosity_REMS36.png',
+          'img/curiosity360REMS/Curiosity_REMS37.png',
+          'img/curiosity360REMS/Curiosity_REMS38.png',
+          'img/curiosity360REMS/Curiosity_REMS39.png',
+          'img/curiosity360REMS/Curiosity_REMS40.png',
+          'img/curiosity360REMS/Curiosity_REMS41.png',
+          'img/curiosity360REMS/Curiosity_REMS42.png',
+          'img/curiosity360REMS/Curiosity_REMS43.png',
+          'img/curiosity360REMS/Curiosity_REMS44.png',
+          'img/curiosity360REMS/Curiosity_REMS45.png',
+          'img/curiosity360REMS/Curiosity_REMS46.png',
+          'img/curiosity360REMS/Curiosity_REMS47.png',
+          'img/curiosity360REMS/Curiosity_REMS48.png',
+          'img/curiosity360REMS/Curiosity_REMS49.png',
+          'img/curiosity360REMS/Curiosity_REMS50.png'
+        ]
 
   - # 1 - Elyseum Planitia // INSIGHT
     id: 1
