--- a/content/08_sectionEsd.yaml
+++ b/content/08_sectionEsd.yaml
@@ -19,25 +19,25 @@ assets:
     - #1
       title: Recetas del CAB. Planeta habitable.
       author: Aurora Merino, Ana del Pino, Lourdes Ruiz, Inmaculada Martín.
-      url: https://www.youtube.com/channel/UCMZ8Tje0_MC_xWcf8iwS1aQ
+      url: https://youtu.be/X6j9lLkZMCo
       icon: video
       target: true
     - #2
       title: What on earth? Extremophiles.
       author: Angélica Jiménez, Delia González, Xeli López.
-      url: https://www.youtube.com/channel/UCMZ8Tje0_MC_xWcf8iwS1aQ
+      url: https://youtu.be/agjvlvj-6tk
       icon: video
       target: true
     - #3
       title: Un planeta para cada extremófilo.
       author: Leonardo Berbesí, Ana Fernández-Golfín, Sara Paniagua, Cristian Iacob.
-      url: https://www.youtube.com/channel/UCMZ8Tje0_MC_xWcf8iwS1aQ
+      url: https://youtu.be/uFCOomATClY
       icon: video
       target: true
     - #4
       title: LUCA. Una hipótesis sobre el origen de la vida.
       author: Alba Vera, María Camarillo, Patryk Cesarz, David Güiza.
-      url: https://www.youtube.com/channel/UCMZ8Tje0_MC_xWcf8iwS1aQ
+      url: https://youtu.be/uGt-SV6NmeY
       icon: video
       target: true
     - #5
