--- a/content/09_sectionFoot.yaml
+++ b/content/09_sectionFoot.yaml
@@ -18,7 +18,7 @@ data:
     - Coordinador del Grupo de Investigación de Diseño para la Divulgación Científica. Francisco Torrego Graña
     - Profesores integrantes del grupo de Investigación. Carlos Aparicio de Santiago, Antonio Cobo Arévalo, Gonzalo Cordero de Ciria, Iván Huelves Illas, Óscar Jiménez Salvador, Estrella Juárez Millán, Santiago Liébana García, Lourdes Marco Pascual
     - Colaborador en el proyecto. Ricardo Horcajada González (Profesor titular UCM)
-    - Todos los fondos y las imágenes de este proyecto son dibujos a mano de Francisco Torrego Graña. Los modelos en 3D del Curiosity, Insight y Perseverance han sido desarrollados por Santiago Liébana García.
+    - Todos los fondos y las imágenes de este proyecto son dibujos a mano de Francisco Torrego Graña.
 
 
 assets:
