--- a/content/05_sectionTrip.yaml
+++ b/content/05_sectionTrip.yaml
@@ -3,22 +3,105 @@
 
 title: Sección
 menuTitle: Viaje de vuelta a la tierra
+assets:
+  backgroundIllustration: /img/backgrounds/005.jpg
 
 data:
   - #1
-    mainText:
-      - “No se trata única y exclusivamente de hacer un instrumento, sino después de sacarle el mayor partido. Requiere científicos de muchas disciplinas (biólogos, geólogos, atmosféricos, físicos...) Y necesitas también a las mejores personas que puedas encontrar para poder materializar esos requisitos científicos (ingenieros electrónicos, ingenieros mecánicos, ingenieros en estructuras, ingenieros térmicos, ingenieros de software...) Y que todos tengan una visión global. Después, entran de nuevo en la cadena los científicos, una vez que esté el dispositivo operando en Marte, para analizar toda esa información”.
-    author: José Antonio Rodríguez Manfredi
-    position: Investigador principal del CAB para las misiones REMS, TWINS y MEDA
+    id: 1
+    order: 1
+    mainText: > 
+      No se trata única y exclusivamente de hacer un instrumento, sino después de sacarle el mayor partido. Requiere científicos de muchas disciplinas: biólogos, geólogos, atmosféricos, físicos... Y necesitas también a los mejores ingenieros que puedas encontrar para poder materializar esos requisitos científicos: electrónicos, mecánicos, en estructuras, térmicos, de software... Y que todos tengan una visión global. Después, entran de nuevo en la cadena los científicos, una vez que esté el dispositivo operando en Marte, para analizar toda esa información
+    author: José Antonio Rodríguez Manfredi.
+    position: Investigador principal del Centro de Astrobiología (CAB, CSIC-INTA) para las misiones REMS, TWINS y MEDA.
+    source: 
+      url: https://elcorreoweb.es/sevilla/de-nino-me-gustaba-cacharrear-y-ahora-disfruto-creando-robotica-para-marte-FX4374403
+      author: El Correo de Sevilla
+      title: 
+    showSource: true
   - #2
-    mainText:
-      - “Nuestras incógnitas esconden problemas extremadamente complejos. La forma que tiene la ciencia de abordarlos es a través de un doble camino; por un lado descomponerlo en aspectos parciales, desmenuzarlo en problemas más sencillos, y una vez que se han estudiado las particularidades, combinarlas para explicar el problema inicial, sintentizándolo”.
-    author: Javier Gómez-Elvira
-    position: Director del CAB
+    id: 2
+    order: 2
+    mainText: >
+      La ciencia conjuga verbos como preguntar, imaginar, idear, construir, experimentar, calcular, publicar, discutir, criticar, divulgar, fracasar, superar, responder... Todos ellos son necesarios para superar los límites de nuestro conocimiento sobre la realidad y avanzar de manera lenta, pero segura, en nuestro entendimiento de todo lo que existe
+    author: Pablo G. Pérez González
+    position: Director del Departamento de Astrofísica (CAB, CSIC-INTA) 
+    source: 
+      url: https://elpais.com/ciencia/2021-03-16/ciencia-clickbait-sensacionalismo-y-conocimiento.html
+      author: El País Ciencia
+      title: 
+    showSource: true
   - #3
-    mainText:
-      - “Cuando repasas la historia de la vida en la Tierra te encuentras con grandes eventos de pérdida de biodiversidad y extinciones masivas, pero la vida, como tal, siempre ha prevalecido. Eso nos lleva a pensar que, si la vida ha surgido en otro lugar (sea por ejemplo en Marte, Encélado o Europa), probablemente haya sido capaz de sobrevivir a pesar de lo que haya ocurrido allí a lo largo del tiempo”.
+    id: 3
+    order: 3
+    mainText: > 
+      La ciencia no proporciona nunca una narrativa sólida de las cosas. No dice esto es así y será así siempre. El conocimiento cambia continuamente y este proceso puede generar desasosiego. La educación desde que somos niños es clave. Aprender a cuestionarnos las cosas sin problema, aprender a pensar por nosotros mismos, ayuda a la ciencia
+    author: Eva Villaver
+    position: Investigadora en el Centro de Astrobiología (CAB, CSIC-INTA) 
+    source: 
+      url: https://www.nobbot.com/entrevistas/eva-villaver-astrobiologia/
+      author: Nobbot
+      title: 
+    showSource: true
+  - #4
+    id: 4
+    order: 4
+    mainText: >
+      Lo que es seguro es que la curiosidad del ser humano, y quizás la necesidad de encontrar otro hogar en caso de que nuestro planeta se vuelva demasiado inhóspito, nos llevará a continuar con la exploración del espacio que casi acabamos de iniciar (...). Nuestro destino está en nuestras manos. Ojalá que este sea el mejor posible
+    author: Ester Lázaro Lázaro
+    position: Directora del Departamento de Evolución Molecular (CAB, CSIC-INTA)
+    source: 
+      url: https://www.conmishijos.com/educacion/entrevista-a-ester-lazaro-lazaro/
+      author: Conmishijos.com
+      title: 
+    showSource: true
+  - #5
+    id: 5
+    order: 5
+    mainText: >
+      La idea de hacer una cartografía de nuestro entorno tiene, en mi opinión, una gran carga emotiva, casi poética, porque nos plantea nuestro lugar en el gran orden del Cosmos
+    author: Michelangelo Pantaleoni González
+    position: Estudiante del Grado de CC. Físicas de la Universidad Complutense de Madrid. Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
+    source: 
+      url: https://www.youtube.com/watch?v=axSVeW2KEEc&ab_channel=CNNenEspa%C3%B1ol
+      author: YouTube - CNN en Español
+      title: 
+    showSource: true
+  - #6
+    id: 6
+    order: 6
+    mainText: >
+      Ver la Tierra desde fuera te pone a ti mismo en el contexto del Universo y te hace ver lo pequeño que eres, que somos todos los seres humanos, toda la biodiversidad que compartimos esta biosfera
     author: Carlos Briones
-    position: Investigador en el CAB
-assets:
-  backgroundIllustration: /img/backgrounds/005.jpg
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA) 
+    source: 
+      url: https://www.youtube.com/watch?v=8JZxoHTPYgY&ab_channel=AprendemosJuntos
+      author: Fundación BBVA
+      title: 
+    showSource: true
+  - #7
+    id: 7
+    order: 7
+    mainText: > 
+      ¿Estamos convencidos de que hay que ir a Marte? Yo sí, desde luego. Creo que la inquietud por explorar nuevos mundos es inevitable
+    author: Víctor Parro García
+    position: Director del Centro de Astrobiología (CAB, CSIC-INTA)
+    source: 
+      url: https://www.youtube.com/watch?v=AOxNrraOyh0&t=684s&ab_channel=Tendencias21
+      author: Tendencias
+      title: 
+    showSource: true
+  - #8
+    id: 8
+    order: 8
+    mainText: >
+      Cuando hemos pensado que habíamos alcanzado los límites del conocimiento, los paradigmas se han roto y hemos descubierto nuevos fenómenos físicos. Esto nos permite encontrar respuestas, pero sobre todo preguntas adicionales
+    author: David Barrado Navascués
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA) 
+    source: 
+      url: https://www.efe.com/efe/america/sociedad/david-barrado-cientifico-la-astronomia-puede-hacernos-algo-mas-humildes/20000013-4589666
+      author: Agencia EFE
+      title: 
+    showSource: true
+
+
