--- a/content/08_sectionEsd.yaml
+++ b/content/08_sectionEsd.yaml
@@ -9,7 +9,7 @@ data:
   mainText:
     - La <strong>Escuela Superior de Diseño de Madrid (e/s/d)</strong> es un centro público perteneciente a las Enseñanzas Artísticas Superiores (Dirección General de Universidades) de la Comunidad de Madrid. En él se imparten los grados y posgrados oficiales en Diseño.
     - En 2020, un grupo de profesores conformamos el <strong>seminario “Diseño para la Ciencia”</strong> con la línea de investigación <strong>“Análisis del rol del diseñador en equipos científicos”</strong>. Desde él, propusimos al CAB la creación de un producto de comunicación sobre el aterrizaje del Perseverance en Marte, <strong>que pusiera en valor la participación en la misión de dicho organismo español</strong>.
-    - Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores. El esta página puedes ver algunos de los resultados de nuestros alumnos/as fruto de esta colaboración.
+    - Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores. En esta página puedes ver algunos de los resultados de nuestros alumnos/as fruto de esta colaboración.
   secondaryText:
     #- Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores.
 
