--- a/content/09_sectionFoot.yaml
+++ b/content/09_sectionFoot.yaml
@@ -15,11 +15,8 @@ data:
   secondaryText:
     - <strong>Escuela Superior de Diseño de Madrid (e/s/d)</strong>
     - Directora. Marina Arespacochaga Maroto
-    - Coordinador del Grupo de Investigación de Diseño para la Divulgación Científica. Francisco Torrego Graña
-    - Profesores integrantes del grupo de Investigación. Carlos Aparicio de Santiago, Antonio Cobo Arévalo, Gonzalo Cordero de Ciria, Iván Huelves Illas, Óscar Jiménez Salvador, Estrella Juárez Millán, Santiago Liébana García, Lourdes Marco Pascual
+    - Profesores integrantes del grupo de Investigación. Carlos Aparicio de Santiago, Antonio Cobo Arévalo, Gonzalo Cordero de Ciria, Iván Huelves Illas, Óscar Jiménez Salvador, Estrella Juárez Millán, Santiago Liébana García, Lourdes Marco Pascual, Francisco Torrego Graña
     - Colaborador en el proyecto. Ricardo Horcajada González (Profesor titular UCM)
-    - Todos los fondos y las imágenes de este proyecto son dibujos realizados a mano.
-
 
 assets:
   backgroundIllustration: /img/backgrounds/009.jpg
