Fix some minor typo details

--- a/content/04_sectionFarewellMachines.yaml
+++ b/content/04_sectionFarewellMachines.yaml
@@ -2,7 +2,7 @@
 # https://www.figma.com/file/LVJsJViTo0ivzgnE0rgW3D/rems_wireframes?node-id=2873%3A1486
 
 title: Sección
-menuTitle: Viaje a la tierra
+menuTitle: El destino de los datos
 
 data:
   title: <span class="primary_color">El destino de los datos</span>
