--- a/content/05_sectionTrip.yaml
+++ b/content/05_sectionTrip.yaml
@@ -13,7 +13,7 @@ data:
     mainText: >
       "No se trata única y exclusivamente de hacer un instrumento, sino después de sacarle el mayor partido. Requiere científicos de muchas disciplinas: biólogos, geólogos, atmosféricos, físicos... Y necesitas también a los mejores ingenieros que puedas encontrar para poder materializar esos requisitos científicos: electrónicos, mecánicos, en estructuras, térmicos, de software... Y que todos tengan una visión global. Después, entran de nuevo en la cadena los científicos, una vez que esté el dispositivo operando en Marte, para analizar toda esa información."
     author: José Antonio Rodríguez Manfredi.
-    position: Investigador principal del Centro de Astrobiología (CAB, CSIC-INTA) para las misiones REMS, TWINS y MEDA.
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
     showSource: true
     resources:
       - #1
@@ -28,7 +28,7 @@ data:
     mainText: >
       "La ciencia conjuga verbos como preguntar, imaginar, idear, construir, experimentar, calcular, publicar, discutir, criticar, divulgar, fracasar, superar, responder... Todos ellos son necesarios para superar los límites de nuestro conocimiento sobre la realidad y avanzar de manera lenta, pero segura, en nuestro entendimiento de todo lo que existe."
     author: Pablo G. Pérez González
-    position: Director del Departamento de Astrofísica (CAB, CSIC-INTA)
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
     showSource: true
     resources:
       - #1
@@ -73,7 +73,7 @@ data:
     mainText: >
       "La idea de hacer una cartografía de nuestro entorno tiene, en mi opinión, una gran carga emotiva, casi poética, porque nos plantea nuestro lugar en el gran orden del Cosmos."
     author: Michelangelo Pantaleoni González
-    position: Estudiante del Grado de CC. Físicas de la Universidad Complutense de Madrid. Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
     showSource: true
     resources:
       - #1
@@ -103,7 +103,7 @@ data:
     mainText: >
       "Lo que es seguro es que la curiosidad del ser humano, y quizás la necesidad de encontrar otro hogar en caso de que nuestro planeta se vuelva demasiado inhóspito, nos llevará a continuar con la exploración del espacio que casi acabamos de iniciar (...). Nuestro destino está en nuestras manos. Ojalá que este sea el mejor posible."
     author: Ester Lázaro Lázaro
-    position: Directora del Departamento de Evolución Molecular (CAB, CSIC-INTA)
+    position: Investigadora en el Centro de Astrobiología (CAB, CSIC-INTA)
     showSource: true
     resources:
       - #1
@@ -118,7 +118,7 @@ data:
     mainText: >
       "¿Estamos convencidos de que hay que ir a Marte? Yo sí, desde luego. Creo que la inquietud por explorar nuevos mundos es inevitable."
     author: Víctor Parro García
-    position: Director del Centro de Astrobiología (CAB, CSIC-INTA)
+    position: Investigador en el Centro de Astrobiología (CAB, CSIC-INTA)
     showSource: true
     resources:
       - #1
